k8s/sites/rielugen/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-rielugen
  namespace: web-rielugen
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-rielugen
  template:
    metadata:
      labels:
        app: web-rielugen
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: storage
              mountPath: /usr/share/nginx/html # マウント先
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: web-content-pvc
