k8s/sites/rielugen/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: web-rielugen
spec:
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv6
  selector:
    app: web-rielugen
  ports:
    - port: 80
      targetPort: 80
