k8s/sites/rielugen/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rielugen-ingress
  namespace: web-rielugen
spec:
  ingressClassName: nginx
  rules:
    - host: rielugen.uniproject.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
